Make sure sidebar category tooltips aren’t cut off

--- a/web/src/components/sidebar.css
+++ b/web/src/components/sidebar.css
@@ -367,3 +367,7 @@ span.story-name {
   max-height: 200px;
   overflow: auto;
 }
+
+.overflow-x-unset {
+  overflow-x: unset;
+}
